--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <title>powerbi_embedded_ui</title>
+    <title>PowerBI Embedded Integration</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
+</head>
+<body>
     <app-root>Loading...</app-root>
-  </body>
+</body>
 </html>
 
